@@ -1,2 +1,2 @@
-wanpipe_linux: git ver 45abca5
+wanpipe_linux: git ver 28e6433
 wanpipe_common: git ver 410a541
