@@ -1,1 +1,1 @@
-wanpipe-7.0.21
+wanpipe-7.0.22
