@@ -1,5 +1,5 @@
 Package: wanpipe
-Version: 7.0.21-0
+Version: 7.0.22-0
 Section: networking
 Priority: optional
 Architecture: all
