@@ -1,6 +1,6 @@
 %define WANPIPE_VER	  wanpipe-modules
 %define name              %{WANPIPE_VER}
-%define version           7.0.21
+%define version           7.0.22
 %define release           0
 %define	serial	 	  1
 %define MODULES_DIR	  /lib/modules
@@ -58,7 +58,12 @@ fi
 
 
 %changelog
-* Tue Oct 4 2017 7.0.21
+* Tue Oct 11 2017 Pushkar Singh <psingh@sangoma.com> - 7.0.22
+==================================================================
+- Support for redhat release version 7.4+ kernel i.e. 3.10.0-693
+
+
+* Tue Oct 4 2017 Nenad Corbic <ncorbic@sangoma.com> -  7.0.21
 ==================================================================
 - Fix BRI intermittent frame loss or delay
 - Support for Kernel version 4.7+
